@@ -1,5 +1,10 @@
 2007-12-22  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/nm-connection-editor.c
+		- (add_wireless_page): clean up default property handling
+
+2007-12-22  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/main.c
 	  src/connection-editor/nm-connection-editor.c
 	  src/connection-editor/nm-connection-editor.h
